<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0D0D">
    <!-- Store Header -->
    <RelativeLayout
        android:id="@+id/store_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true">

        <!-- TODO! android:text="@string/headerText should be change to the actual logo" -->
        <TextView
            android:id="@+id/supernova_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/headerText"
            android:layout_marginTop="2dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Cart Icon (Left) -->
        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/supernova_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/cart"
            android:contentDescription="@string/cartDescription"/>

        <!-- Bell Icon (Right) -->
        <ImageButton
            android:id="@+id/notif_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/supernova_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/notif_bell"
            android:contentDescription="@string/bellDescription"/>

        <!-- Search Bar (Center) -->
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_below="@id/supernova_title"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/notif_button"
            android:layout_toEndOf="@id/cart_button"
            android:background="@drawable/search_background"
            android:drawableEnd="@drawable/search_button"
            android:paddingHorizontal="16dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />
    </RelativeLayout>

    <!-- Store Content Area -->
    <ScrollView
        android:id="@+id/content_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/store_header"
        android:fillViewport="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Store Page"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="50sp"/>
    </ScrollView>
</RelativeLayout>